--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
       "35850": "Science",
       "35849": "SST"
     };
-    const GITHUB_API_BASE = "https://automation9thphp.vercel.app/api/api.php?token=my_secret_key123&view=";
+    const GITHUB_API_BASE = "/.netlify/functions/fetchData?tab=";";
 
     let data = {};
     let currentTab = "live";
